Fix modal blocking pressing join
The invisible modal would capture the click event to join a lobby.

--- a/src/app/lobbies/LobbiesPage.css
+++ b/src/app/lobbies/LobbiesPage.css
@@ -84,7 +84,8 @@ header {
     margin: auto ;
     transform: translateY(-20px);
     opacity: 0;
-    transition: opacity 0.3s, transform 0.3s;
+    visibility: hidden;
+    transition: opacity 0.3s, transform 0.3s, visibility 0.3s, transform 0.3s;
     /* align-items: center; */
     padding: 12px;
 }
@@ -108,6 +109,7 @@ header {
 
 .create-modal.visible {
     opacity: 1;
+    visibility: visible;
     transform: translateY(0);
 }
 
